@@ -2,7 +2,7 @@ import com.v2soft.styxlib.exceptions.StyxErrorMessageException;
 import com.v2soft.styxlib.exceptions.StyxException;
 import com.v2soft.styxlib.l6.vfs.MemoryStyxDirectory;
 import com.v2soft.styxlib.l6.vfs.MemoryStyxFile;
-import com.v2soft.styxlib.server.ClientDetails;
+import com.v2soft.styxlib.server.ClientsRepoImpl;
 import com.v2soft.styxlib.server.StyxServerManager;
 import com.v2soft.styxlib.server.tcp.TCPServerChannelDriver;
 
@@ -10,8 +10,8 @@ import java.io.IOException;
 import java.net.InetAddress;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 /**
  * Java server that calculate MD5 digest.
@@ -24,36 +24,36 @@ public class MD5ServerSample {
 
     public static void main(String[] args) throws IOException, InterruptedException, StyxException {
         MemoryStyxFile md5 = new MemoryStyxFile(FILE_NAME){
-            protected HashMap<ClientDetails, MessageDigest> mClientsMap = new HashMap<ClientDetails, MessageDigest>();
+            protected HashMap<Integer, MessageDigest> mClientsMap = new HashMap<>();
             @Override
-            public boolean open(ClientDetails client, int mode)
+            public boolean open(int clientId, int mode)
                     throws StyxException {
                 try {
                     MessageDigest md = MessageDigest.getInstance("MD5");
-                    mClientsMap.put(client, md);
+                    mClientsMap.put(clientId, md);
                 } catch (NoSuchAlgorithmException e) {
                     return false;
                 }
-                return super.open(client, mode);
+                return super.open(clientId, mode);
             }
             @Override
-            public void close(ClientDetails client) {
-                mClientsMap.remove(client);
-                super.close(client);
+            public void close(int clientId) {
+                mClientsMap.remove(clientId);
+                super.close(clientId);
             }
             @Override
-            public int write(ClientDetails client, byte[] data, long offset)
+            public int write(int clientId, byte[] data, long offset)
                     throws StyxErrorMessageException {
-                if ( mClientsMap.containsKey(client) ) {
-                    mClientsMap.get(client).update(data, 0, data.length);
+                if ( mClientsMap.containsKey(clientId) ) {
+                    mClientsMap.get(clientId).update(data, 0, data.length);
                 }
-                return super.write(client, data, offset);
+                return super.write(clientId, data, offset);
             }
             @Override
-            public int read(ClientDetails client, byte[] outbuffer, long offset, int count)
+            public int read(int clientId, byte[] outbuffer, long offset, int count)
                     throws StyxErrorMessageException {
-                if ( mClientsMap.containsKey(client) ) {
-                    byte[] digest = mClientsMap.get(client).digest();
+                if ( mClientsMap.containsKey(clientId) ) {
+                    byte[] digest = mClientsMap.get(clientId).digest();
                     if (count < digest.length) {
                         return 0;
                     } else {
@@ -61,18 +61,21 @@ public class MD5ServerSample {
                         return digest.length;
                     }
                 }
-                return super.read(client, outbuffer, offset, count);
+                return super.read(clientId, outbuffer, offset, count);
             }
         };
+        var clientsRepo = new ClientsRepoImpl();
         var driver = new TCPServerChannelDriver(
                 InetAddress.getByName("127.0.0.1"),
                 PORT,
-                false);
+                false,
+                clientsRepo);
         MemoryStyxDirectory root = new MemoryStyxDirectory("root", driver.getSerializer());
         root.addFile(md5);
         StyxServerManager mServer = new StyxServerManager(
                 root,
-                Arrays.asList(driver));
+                List.of(driver),
+                clientsRepo);
         mServer.start();
         System.out.println("Test server listen on 127.0.0.1:" + PORT);
         mServer.joinThreads();
